fixed overflow bug

--- a/src/js/components/mocky.scss
+++ b/src/js/components/mocky.scss
@@ -17,6 +17,7 @@ html,body{
 
     .mainPage{
         flex: 3 1 auto;
+        overflow-y: scroll;
     }
 }
 
